build_result.txt
> Task :app:clean
> Task :app:preBuild UP-TO-DATE
> Task :app:preDebugBuild UP-TO-DATE
> Task :app:mergeDebugNativeDebugMetadata NO-SOURCE
> Task :app:checkKotlinGradlePluginConfigurationErrors
> Task :app:generateDebugResValues
> Task :app:mapDebugSourceSetPaths
> Task :app:generateDebugResources
> Task :app:checkDebugAarMetadata
> Task :app:packageDebugResources
> Task :app:createDebugCompatibleScreenManifests
> Task :app:extractDeepLinksDebug
> Task :app:parseDebugLocalResources
> Task :app:mergeDebugResources

> Task :app:processDebugMainManifest
[org.tensorflow:tensorflow-lite:2.14.0] C:\Users\saura\.gradle\caches\9.0-milestone-1\transforms\ed06861623bd9f12efd0f1a16fb3d3cf\transformed\jetified-tensorflow-lite-2.14.0\AndroidManifest.xml Warning:
	Namespace 'org.tensorflow.lite' is used in multiple modules and/or libraries: org.tensorflow:tensorflow-lite:2.14.0, org.tensorflow:tensorflow-lite-gpu:2.14.0, org.tensorflow:tensorflow-lite-api:2.14.0. Please ensure that all modules and libraries have a unique namespace. For more information, See https://developer.android.com/studio/build/configure-app-module#set-namespace
[org.tensorflow:tensorflow-lite-support:0.4.4] C:\Users\saura\.gradle\caches\9.0-milestone-1\transforms\4b2e55ad712ce6320d8e4f6c85bc86d8\transformed\jetified-tensorflow-lite-support-0.4.4\AndroidManifest.xml Warning:
	Namespace 'org.tensorflow.lite.support' is used in multiple modules and/or libraries: org.tensorflow:tensorflow-lite-support:0.4.4, org.tensorflow:tensorflow-lite-support-api:0.4.4. Please ensure that all modules and libraries have a unique namespace. For more information, See https://developer.android.com/studio/build/configure-app-module#set-namespace

> Task :app:processDebugManifest
> Task :app:javaPreCompileDebug
> Task :app:mergeDebugShaders
> Task :app:compileDebugShaders NO-SOURCE
> Task :app:generateDebugAssets UP-TO-DATE
> Task :app:mergeDebugAssets
> Task :app:desugarDebugFileDependencies
> Task :app:mergeDebugJniLibFolders
> Task :app:compressDebugAssets
> Task :app:checkDebugDuplicateClasses
> Task :app:validateSigningDebug
> Task :app:writeDebugAppMetadata
> Task :app:mergeLibDexDebug
> Task :app:writeDebugSigningConfigVersions
> Task :app:processDebugManifestForPackage
> Task :app:mergeDebugNativeLibs

> Task :app:stripDebugDebugSymbols
Unable to strip the following libraries, packaging them as they are: libface_detector_v2_jni.so, libtensorflowlite_gpu_jni.so, libtensorflowlite_jni.so.

> Task :app:processDebugResources
> Task :app:kspDebugKotlin
> Task :app:mergeExtDexDebug

> Task :app:compileDebugKotlin
w: file:///C:/Users/saura/Desktop/android%20apps/facialPhotoManagement/app/src/main/java/com/example/facialrecognition/domain/FaceEmbedder.kt:45:13 Variable 'outputBuffer' is never used
w: file:///C:/Users/saura/Desktop/android%20apps/facialPhotoManagement/app/src/main/java/com/example/facialrecognition/domain/FaceProcessingManager.kt:98:22 Variable 'updatedPerson' is never used
w: file:///C:/Users/saura/Desktop/android%20apps/facialPhotoManagement/app/src/main/java/com/example/facialrecognition/ui/detail/PersonDetailViewModel.kt:64:57 Unchecked cast: PersonDetailViewModel to T
w: file:///C:/Users/saura/Desktop/android%20apps/facialPhotoManagement/app/src/main/java/com/example/facialrecognition/ui/main/MainScreen.kt:110:5 Parameter 'processedPhotoCount' is never used

> Task :app:compileDebugJavaWithJavac FAILED

.\gradlew : C:\Users\saura\Desktop\android apps\facia
lPhotoManagement\app\build\generated\ksp\debug\java\c
om\example\facialrecognition\data\local\dao\PersonDao
_Impl.java:35: error: duplicate class: com.example.fa
cialrecognition.data.local.dao.PersonDao_Impl
At line:1 char:1
+ .\gradlew clean assembleDebug 2>&1 | Out-File 
-FilePath build_result. ...
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (C:    
\Users\saura\....PersonDao_Impl:String) [],     
RemoteException
    + FullyQualifiedErrorId : NativeCommandErro    r
 
public final class PersonDao_Impl implements 
PersonDao {
             ^
1 error

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task 
':app:compileDebugJavaWithJavac'.
> Compilation failed; see the compiler output below.
  C:\Users\saura\Desktop\android apps\facialPhotoMana
gement\app\build\generated\ksp\debug\java\com\example
\facialrecognition\data\local\dao\PersonDao_Impl.java
:35: error: duplicate class: com.example.facialrecogn
ition.data.local.dao.PersonDao_Impl
  public final class PersonDao_Impl implements 
PersonDao {
               ^
  1 error

[Incubating] Problems report is available at: file:///C:/Users/saura/Desktop/android%20apps/facialPhotoManagement/build/reports/problems/problems-report.html
* Try:
> Check your code and dependencies to fix the 
compilation error(s)
> Run with --scan to get full insights.

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.0.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.0-milestone-1/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 15s
31 actionable tasks: 31 executed
